--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,25 @@ html {
 body {
     height: 700rem;
     font-size: 1.6rem;
+
 }
+
 
 /* ((MAIN)) */
 
-.fondo {
-    display: flex;
-    height: 70rem;
-    width: 100%;
+.main {
+    padding-top: 12rem;
+}
+
+/* ((RECURSOS-MUESTRA)) */
+
+.recursos-muestra {
+    height: 60rem;
+
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 2rem;
     position: relative;
-    z-index: 5;
 }
 
 .fondo--filtro {
@@ -54,35 +63,24 @@ body {
     /* No bloquea interacción */
 }
 
-/* => FONDO IZQUIERDA */
+/* => RECURSO VIDEO */
 
-.fondo__izquierda {
-    width: 70%;
-    /* si se usa imagen: */
-    /*     background-image: url(../src/img/bg/parque01.jpg);
-    background-size: cover;
-    background-position-y: 22%; */
-    /*     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
- */
-}
-
-.fondo__video {
+.video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-/* => FONDO DERECHA */
+/* => RECURSO IMAGEN */
 
-.fondo__derecha {
-    width: 30%;
+.recurso__imagen {
     background-image: url(../src/img/bg/parque_pueblonuevo.webp);
     background-size: cover;
     background-position: center;
     position: relative;
 }
 
-.fondo__derecha::after {
+.recurso__imagen::after {
     position: absolute;
     content: "";
     top: 0;
@@ -93,94 +91,101 @@ body {
     opacity: .7;
 }
 
-/* => BANNER */
-
-.banner {
-    width: fit-content;
-    /* tamaño minimo necesario */
-    font-family: var(--fuentePrincipal);
-
+.banner__ubicacion {
     position: absolute;
-    /* contenedor relativo: .fondo */
-    z-index: 2;
-
-    right: 0;
     bottom: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 3rem;
-
-}
-
-.banner--default {
-    width: fit-content;
-    background-color: var(--colorPrimario);
-    color: var(--blanco);
-}
-
-.banner p:nth-child(1) {
-    font-size: 3rem;
-    font-weight: 500;
-    padding: .3rem 1rem;
-}
-
-.banner p:nth-child(2) {
-    grid-column: 1/3;
-    /* título */
-    height: fit-content;
-    font-family: var(--fuenteHeading);
-    color: var(--colorSecundario);
-    font-size: 7.3rem;
-    font-weight: bolder;
-    text-shadow: 3px 3px 8px var(--negroAlpha);
-}
-
-.banner p:nth-child(3) {
-    font-style: italic;
-    font-size: 2.9rem;
-    padding: .5rem 1rem;
-}
-
-.banner p:nth-child(3) span {
-    font-family: var(--fuenteHeading);
-    font-size: 4.3rem;
-    font-weight: bolder;
-}
-
-.banner p:nth-child(4) {
+    right: 0;
     background-color: var(--gris);
+    font-family: var(--fuentePrincipal);
     font-size: 1.9rem;
     font-weight: 500;
     padding: .7rem 1rem;
-    justify-self: right;
-    align-self: end;
-    height: fit-content;
 
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
+/* => BANNER */
+
+.recurso__banner {
+    width: fit-content;
+    /* tamaño minimo necesario */
+    font-family: var(--fuentePrincipal);
+    position: absolute;
+
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 5rem 5rem;
+
+}
+
+.recurso__banner--default {
+    width: fit-content;
+    background-color: var(--colorPrimario);
+    color: var(--blanco);
+}
+
+.recurso__banner p:nth-child(1) {
+    font-size: 3rem;
+    font-weight: 500;
+    padding: .3rem 1rem;
+}
+
+.recurso__banner p:nth-child(2) {
+    /* título */
+    font-family: var(--fuenteHeading);
+    color: var(--colorSecundario);
+    font-size: 7.3rem;
+    font-weight: bolder;
+    text-shadow: 3px 3px 8px var(--negroAlpha);
+    background-color: var(--negroAlpha);
+    backdrop-filter: blur(10px);
+
+}
+
+.recurso__banner p:nth-child(3) {
+    font-style: italic;
+    font-size: 2.9rem;
+    padding: .5rem 1rem;
+}
+
+.recurso__banner p:nth-child(3) span {
+    font-family: var(--fuenteHeading);
+    font-size: 4.3rem;
+    font-weight: bolder;
+}
+
+
+
 /* ((INFORMACION)) */
 
-.informacion p{
+/* ((UTILIDADES)) */
 
+.contenedor {
+    width: min(90%, 120rem);
+    margin: 0 auto;
+}
 
+.tarjeta-grid {
+    background-color: var(--blanco);
+    border: .1rem solid var(--grisBorder);
+    border-radius: 1rem;
+    overflow: hidden;
 }
 
 /* ((REUTILIZABLES)) */
 
 .header {
-    width: min(90%, 100rem);
     background-color: var(--blanco);
-    border: .1rem solid var(--grisBorder);
-    border-radius: .8rem;
-    padding: 0 1.5rem;
+    background-image: url(../src/img/textures/diagonal-noise.png);
+    width: 100%;
     position: fixed;
     z-index: 1000;
-    top: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 0;
+    left: 0;
 }
 
 .navbar {
@@ -188,6 +193,7 @@ body {
     font-size: 1.6rem;
     height: 7rem;
 
+    margin: 1.5rem 3rem;
     display: flex;
     gap: 2rem;
     align-items: center;
@@ -205,14 +211,23 @@ body {
 }
 
 .navbar__a {
+    background-color: var(--blanco);
     font-weight: 600;
     text-decoration: none;
     color: var(--negro);
+    padding: .7rem 1.5rem;
+    border-radius: 4rem;
+    border: .1rem solid var(--grisBorder);
+    transition: background .2s ease, color .2s ease, transform .2s ease;
 }
 
 .navbar__a:hover {
-    color: var(--colorSecundario);
+    transform: scaleX(1.1) scaleY(1.1);
+    color: var(--blanco);
+    background: var(--colorPrimario)
 }
+
+.navbar__a:focus {}
 
 .navbar__a--colorbutton {
     color: var(--blanco);
@@ -231,4 +246,3 @@ body {
     background-color: var(--gris);
     color: var(--blanco);
 }
-
