--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
     --blanco: #fff;
     --gris: #777777;
     --grisClaro: #e8e8e8;
+    --grisClaro2: #f1f1f1;
     --grisBorder: #a3a3a3aa;
     --negro: #000;
     --negroAlpha: #00000080;
-    --fuentePrincipal: 'Inter', sans-serif;
+    --fuentePrincipal: 'Montserrat', sans-serif;
     --fuenteHeading: 'Fraunces', serif;
     --colorPrimario: #003156;
     --colorPrimario2: #055f91;
@@ -18,7 +19,7 @@ html {
     box-sizing: border-box;
 
     /* APARIENCIA */
-    background-color: var(--grisClaro);
+    background-color: var(--grisClaro2);
 }
 
 *,
@@ -30,9 +31,7 @@ html {
 }
 
 body {
-    height: 700rem;
     font-size: 1.6rem;
-
 }
 
 
@@ -42,9 +41,9 @@ body {
     padding-top: 12rem;
 }
 
-/* ((RECURSOS-MUESTRA)) */
+/* ((MUESTRA)) */
 
-.recursos-muestra {
+.muestra {
     height: 60rem;
 
     display: grid;
@@ -60,10 +59,9 @@ body {
     background: linear-gradient(to bottom, var(--colorPrimario), rgba(0, 0, 0, 0) 100%);
     pointer-events: none;
     z-index: 1;
-    /* No bloquea interacción */
 }
 
-/* => RECURSO VIDEO */
+/* => MUESTRA VIDEO */
 
 .video {
     width: 100%;
@@ -71,16 +69,16 @@ body {
     object-fit: cover;
 }
 
-/* => RECURSO IMAGEN */
+/* => MUESTRA IMAGEN */
 
-.recurso__imagen {
+.muestra__imagen {
     background-image: url(../src/img/bg/parque_pueblonuevo.webp);
     background-size: cover;
     background-position: center;
     position: relative;
 }
 
-.recurso__imagen::after {
+.muestra__imagen::after {
     position: absolute;
     content: "";
     top: 0;
@@ -91,24 +89,11 @@ body {
     opacity: .7;
 }
 
-.banner__ubicacion {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background-color: var(--gris);
-    font-family: var(--fuentePrincipal);
-    font-size: 1.9rem;
-    font-weight: 500;
-    padding: .7rem 1rem;
 
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
 
-/* => BANNER */
+/* => MUESTRA BANNER */
 
-.recurso__banner {
+.muestra__banner {
     width: fit-content;
     /* tamaño minimo necesario */
     font-family: var(--fuentePrincipal);
@@ -122,19 +107,19 @@ body {
 
 }
 
-.recurso__banner--default {
+.muestra__banner--default {
     width: fit-content;
     background-color: var(--colorPrimario);
     color: var(--blanco);
 }
 
-.recurso__banner p:nth-child(1) {
+.muestra__banner p:nth-child(1) {
     font-size: 3rem;
     font-weight: 500;
     padding: .3rem 1rem;
 }
 
-.recurso__banner p:nth-child(2) {
+.muestra__banner p:nth-child(2) {
     /* título */
     font-family: var(--fuenteHeading);
     color: var(--colorSecundario);
@@ -146,26 +131,438 @@ body {
 
 }
 
-.recurso__banner p:nth-child(3) {
+.muestra__banner p:nth-child(3) {
     font-style: italic;
     font-size: 2.9rem;
     padding: .5rem 1rem;
 }
 
-.recurso__banner p:nth-child(3) span {
+.muestra__banner p:nth-child(3) span {
     font-family: var(--fuenteHeading);
     font-size: 4.3rem;
     font-weight: bolder;
 }
 
+.muestra__banner p:nth-child(4) {
+    background-color: var(--gris);
+    font-size: 1.9rem;
+    font-weight: 500;
+    padding: .7rem 1rem;
 
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+/* ((CONTENIDO)) */
+
+.contenido {
+    /* layout */
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 8rem;
+}
 
 /* ((INFORMACION)) */
 
+.informacion__izquierda {}
+
+/* ((INFORMACION: ENTRADA)) */
+
+.informacion__entrada h2 {
+    font-size: 2.8rem;
+}
+
+.informacion__entrada p {
+    line-height: 1.7;
+    margin-top: 2rem;
+}
+
+/* ((INFORMACION: TOP))*/
+
+.informacion__top {
+    /* layout */
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin: 3rem auto;
+    width: min(70%, 60%);
+}
+
+.informacion__top div {
+    border-radius: .8rem;
+    border: none;
+    background-color: var(--colorPrimario);
+
+    /* layout */
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1.5rem;
+    transition: transform .2s ease;
+}
+
+.informacion__top div:hover {
+    transform: scaleX(1.03) scaleY(1.03);
+}
+
+.informacion__top p {
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    user-select: none;
+    font-size: 1.4rem;
+    font-weight: bolder;
+    text-align: center;
+}
+
+/* ((INFORMACION: UBICACION)) */
+
+.ubicacion {
+    /* layout */
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    margin: 7rem 0;
+}
+
+.ubicacion__banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.ubicacion__titulo {
+    font-size: 3rem;
+    font-family: var(--fuenteHeading);
+    font-weight: bolder;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.ubicacion__mapa {
+    aspect-ratio: 10 / 7;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.ubicacion__botones {
+    display: flex;
+    gap: 1rem;
+}
+
+.ubicacion__boton {
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+/* ((INFORMACION: BENEFICIOS)) */
+
+.beneficios {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 7rem auto;
+}
+
+.beneficios__titulo {
+    font-size: 3rem;
+    font-family: var(--fuenteHeading);
+    font-weight: bolder;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.beneficios__layout {
+    /* layout */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    margin-top: 2rem;
+}
+
+.beneficio {
+    background-color: var(--colorPrimario);
+    color: var(--blanco);
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-align: left;
+    border-radius: .8rem;
+    border: .1rem solid var(--colorPrimario2);
+
+    /* layout */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 2rem;
+}
+
+/* ((INFORMACION: RECURSOS)) */
+
+.recursos {
+    margin: 7rem 0;
+}
+
+.recursos__titulo {
+    font-size: 3rem;
+    font-family: var(--fuenteHeading);
+    font-weight: bolder;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.recursos__informacion {
+    line-height: 1.7;
+    margin-top: 2rem;
+}
+
+.recursos__videos {
+    margin-top: 4rem;
+}
+
+.recursos__videos iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+}
+
+.recursos__fotos {
+    margin-top: 4rem;
+}
+
+.swiper1 {
+    width: 90%;
+    aspect-ratio: 10 / 16;
+}
+
+.swiper1 .swiper-slide {
+    display: flex;
+}
+
+.swiper1 .swiper-slide img {
+    max-width: 100%;
+    object-fit: cover;
+}
+
+/* ((INFORMACION: CONOCE)) */
+
+.conoce {
+    margin: 7rem 0;
+    width: 100%;
+}
+
+.conoce__informacion {
+    line-height: 1.7;
+    margin-top: 2rem;
+}
+
+.swiper2 {
+    margin-top: 4rem;
+    width: 90%;
+}
+
+.swiper2 .swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.conoce__elemento {
+    background-color: var(--blanco);
+    border: .1rem solid var(--grisBorder);
+    border-radius: .8rem;
+
+    padding: 3rem;
+    aspect-ratio: 10 / 10;
+}
+
+.conoce__elemento p:nth-of-type(1) {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin: 2rem 0;
+}
+
+.conoce__elemento p:nth-of-type(2) {
+    border: .1rem solid var(--grisBorder);
+    border-radius: .4rem;
+    padding: .3rem;
+    font-size: 1.4rem;
+    width: fit-content;
+}
+
+.conoce__elemento p:nth-of-type(3) {
+    line-height: 1.4;
+    margin-top: 1rem;
+}
+
+.conoce__elemento img {
+    width: 100%;
+    aspect-ratio: 10 / 7;
+    object-fit: cover;
+}
+
+/* => INFORMACION DERECHA */
+
+.informacion__derecha {}
+
+/* => FORMULARIO */
+
+.formulario {
+    flex: 1.3;
+    box-shadow: 0px 0px 15px var(--grisBorder);
+
+    /* layout */
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem 3rem 4rem;
+    margin: 0 auto;
+    height: fit-content;
+    width: min(100%, 40rem);
+}
+
+.formulario__titulo {
+    font-size: 1.9rem;
+    font-family: var(--fuentePrincipal);
+    font-weight: bolder;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+
+.formulario__campo:nth-of-type(1) {
+    margin-top: 3rem;
+}
+
+.formulario__campo {
+    font-family: var(--fuentePrincipal);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.formulario__campo span {
+    font-weight: 500;
+}
+
+.formulario__campo input {
+    margin-top: .5rem;
+}
+
+.formulario__input {
+    padding: .8rem 1rem;
+    border-radius: .8rem;
+    border: .1rem solid var(--grisBorder);
+}
+
+.formulario__informacion {
+    font-size: 1.3rem;
+    text-align: center;
+}
+
+.formulario__informacion a {
+    color: var(--colorPrimario2)
+}
+
+.formulario__input--submit {
+    font-family: var(--fuentePrincipal);
+    background-color: var(--negro);
+    color: var(--blanco);
+    font-weight: bold;
+    border-radius: .4rem;
+    border: none;
+
+    margin-top: 4rem;
+    padding: 1.6rem 1rem;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* ((FOOTER)) */
+
+
+.footer {
+    background-color: var(--colorPrimario2);
+    margin-top: 4rem;
+}
+
+.footer_contenido {
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+
+    padding: 3rem 2rem 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    column-gap: 2rem;
+    row-gap: 4rem;
+}
+
+.footer_contenido>a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_contenido .logo {
+    height: 13rem;
+}
+
+.footer_redes {
+    margin: 0 auto;
+}
+
+.footer_redes ul,
+.footer_enlaces ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer_redes ul {
+    gap: .5rem;
+    margin-top: 2rem;
+}
+
+.footer_redes a {
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+    text-decoration: none;
+    color: var(--blanco);
+}
+
+.footer_redes .icono {
+    height: 3rem;
+}
+
+.footer_enlaces {
+    display: none;
+}
+
+.footer_informacion-bottom {
+    text-align: center;
+    grid-column: 1/3;
+    ;
+}
+
 /* ((UTILIDADES)) */
 
+
+.fuente-principal {
+    font-family: var(--fuentePrincipal);
+}
+
 .contenedor {
-    width: min(90%, 120rem);
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -174,6 +571,24 @@ body {
     border: .1rem solid var(--grisBorder);
     border-radius: 1rem;
     overflow: hidden;
+}
+
+.tarjeta-grid-noimg {
+    padding: 2rem;
+}
+
+.button-roundborder-simple {
+    background-color: var(--blanco);
+    border-radius: .8rem;
+    border: .1rem solid var(--grisBorder);
+    padding: .4rem 1rem;
+    cursor: pointer;
+    transition: color .2s ease, background-color .2s ease, transform .2s ease;
+}
+
+.button-roundborder-simple:hover {
+    background-color: var(--grisClaro);
+    transform: scaleX(1.1) scaleY(1.1);
 }
 
 /* ((REUTILIZABLES)) */
@@ -202,7 +617,6 @@ body {
 
 .navbar__logo {
     height: inherit;
-
 }
 
 .navbar__enlaces {
@@ -210,7 +624,7 @@ body {
     gap: 2rem;
 }
 
-.navbar__a {
+.navbar__enlace {
     background-color: var(--blanco);
     font-weight: 600;
     text-decoration: none;
@@ -221,15 +635,13 @@ body {
     transition: background .2s ease, color .2s ease, transform .2s ease;
 }
 
-.navbar__a:hover {
+.navbar__enlace:hover {
     transform: scaleX(1.1) scaleY(1.1);
     color: var(--blanco);
     background: var(--colorPrimario)
 }
 
-.navbar__a:focus {}
-
-.navbar__a--colorbutton {
+.navbar__enlace--colorbutton {
     color: var(--blanco);
     font-size: 1.3rem;
     font-style: italic;
@@ -245,4 +657,110 @@ body {
 .navbar__a--colorbutton:hover {
     background-color: var(--gris);
     color: var(--blanco);
+}
+
+.separador {
+    width: 100%;
+    height: .08rem;
+    background-color: var(--colorPrimario);
+    margin: 2rem 0;
+}
+
+.r-titulos {
+    font-size: 3rem;
+    font-family: var(--fuenteHeading);
+    font-weight: bolder;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+/* ((MEDIA QUERYS)) */
+
+@media (min-width: 900px) {
+
+    .footer_enlaces {
+        display: block;
+    }
+
+    .footer_enlaces ul {
+        height: 100%;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .footer_enlaces a {
+        text-decoration: none;
+        color: var(--blanco);
+    }
+
+    .footer_enlaces a:hover {
+        color: var(--colorSecundario);
+    }
+
+    .footer_contenido {
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 4rem;
+    }
+
+    .footer_informacion-bottom {
+        grid-column: 1 / 4;
+    }
+}
+
+@media (min-width: 1000px) {
+    .contenedor {
+        width: 95%;
+    }
+
+    .contenido {
+        flex-direction: row;
+    }
+
+    .formulario {}
+
+    .informacion__izquierda {
+        flex: 3;
+        min-width: 0;
+    }
+
+    .informacion__derecha {
+        flex: 1.3;
+        min-width: 0;
+    }
+
+    /* ((INFORMACION TOP)) */
+    .informacion__top {
+        /* layout */
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .informacion__top div {
+        /* layout */
+        flex-direction: row-reverse;
+    }
+
+    /* ((BENEFICIOS)) */
+    .beneficios__layout {
+        /* layout */
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    /* ((SWIPER1) */
+    .swiper1 {
+        width: 50%;
+        aspect-ratio: 10 / 16;
+    }
+
+    /* ((FORMULARIO)) */
+
+    .formulario {
+        gap: 1rem;
+        padding: 3rem;
+        width: 100%;
+    }
+
+    .formulario__campo:nth-of-type(1) {
+        margin-top: 2rem;
+    }
 }
