--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --fuentePrincipal: 'Montserrat', sans-serif;
     --fuenteHeading: 'Fraunces', serif;
     --colorPrimario: #003156;
+    --colorPrimarioAlpha: #00315670;
     --colorPrimario2: #055f91;
     --colorPrimario3: #02a5b4;
     --colorSecundario: #fbb12f;
@@ -38,17 +39,12 @@ body {
 /* ((MAIN)) */
 
 .main {
-    padding-top: 12rem;
+    padding-top: 10rem;
 }
 
 /* ((MUESTRA)) */
 
 .muestra {
-    height: 60rem;
-
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    column-gap: 2rem;
     position: relative;
 }
 
@@ -61,6 +57,13 @@ body {
     z-index: 1;
 }
 
+/* => MUESTRA IMAGEN */
+
+.muestra__imagen {
+    display: none;
+}
+
+
 /* => MUESTRA VIDEO */
 
 .video {
@@ -69,33 +72,73 @@ body {
     object-fit: cover;
 }
 
-/* => MUESTRA IMAGEN */
-
-.muestra__imagen {
-    background-image: url(../src/img/bg/parque_pueblonuevo.webp);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-
-.muestra__imagen::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../src/img/textures/diagonal-noise.png);
-    opacity: .7;
-}
-
-
-
 /* => MUESTRA BANNER */
 
 .muestra__banner {
+    /* layout */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(75%);
+    width: 90%;
+}
+
+.banner__titulo {
+    font-size: 2rem;
+    text-align: center;
+    color: var(--blanco);
+    background-color: var(--colorPrimarioAlpha);
+    backdrop-filter: blur(10px);
+    padding: 1rem 2rem;
     width: fit-content;
-    /* tamaño minimo necesario */
+}
+
+.banner__titulo p:last-of-type {
+    font-size: 3.4rem;
+}
+
+.banner__informacion {
+    background-color: var(--blanco);
+    font-family: var(--fuentePrincipal);
+    font-weight: 600;
+    box-shadow: 0px 0px 10px var(--negroAlpha);
+
+    /* layout */
+    display: flex;
+    justify-content: space-around;
+    gap: 1rem;
+    padding: 2rem;
+    width: 100%;
+}
+
+.banner__informacion div:nth-child(1) {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner__informacion div:nth-child(1) p:last-of-type {
+    font-size: 2rem;
+}
+
+
+.banner__informacion div:nth-child(2) {
+    color: var(--colorPrimario);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+
+/* 
+.muestra__banner {
+    width: fit-content;
     font-family: var(--fuentePrincipal);
     position: absolute;
 
@@ -120,7 +163,6 @@ body {
 }
 
 .muestra__banner p:nth-child(2) {
-    /* título */
     font-family: var(--fuenteHeading);
     color: var(--colorSecundario);
     font-size: 7.3rem;
@@ -153,7 +195,7 @@ body {
     align-items: center;
     gap: 1rem;
 }
-
+ */
 /* ((CONTENIDO)) */
 
 .contenido {
@@ -161,7 +203,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-top: 8rem;
+    margin-top: 16rem;
 }
 
 /* ((INFORMACION)) */
@@ -217,6 +259,10 @@ body {
     text-align: center;
 }
 
+.informacion__top img {
+    user-select: none;
+}
+
 /* ((INFORMACION: UBICACION)) */
 
 .ubicacion {
@@ -246,7 +292,7 @@ body {
 
 .ubicacion__mapa {
     aspect-ratio: 10 / 7;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -297,6 +343,7 @@ body {
     text-align: left;
     border-radius: .8rem;
     border: .1rem solid var(--colorPrimario2);
+    user-select: none;
 
     /* layout */
     display: flex;
@@ -304,6 +351,12 @@ body {
     align-items: center;
     gap: 1rem;
     padding: 1rem 2rem;
+    transition: transform .2s ease;
+}
+
+
+.beneficio:hover {
+    transform: scaleX(1.03) scaleY(1.03);
 }
 
 /* ((INFORMACION: RECURSOS)) */
@@ -563,6 +616,12 @@ body {
 
 .contenedor {
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.contenedor2 {
+    width: min(100%, 150rem);
     margin: 0 auto;
 }
 
@@ -610,7 +669,6 @@ body {
 
     margin: 1.5rem 3rem;
     display: flex;
-    gap: 2rem;
     align-items: center;
     justify-content: space-between;
 }
@@ -619,9 +677,70 @@ body {
     height: inherit;
 }
 
+.navbar_menu-button {
+    background: transparent;
+    cursor: pointer;
+
+    /* layout */    
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 30px;
+}
+
+.navbar_menu-button input {
+    display: none;
+}
+
+.navbar_menu-button span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: var(--blanco);
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+}
+
+.navbar_menu-button span:nth-of-type(1) {
+    top: 0px;
+    transform-origin: left center;
+}
+
+.navbar_menu-button span:nth-of-type(2) {
+    top: 50%;
+    transform: translateY(-50%);
+    transform-origin: left center;
+}
+
+.navbar_menu-button span:nth-of-type(3) {
+    top: 100%;
+    transform: translateY(-100%);
+    transform-origin: left center;
+}
+
+.navbar_menu-button input:checked~span:nth-of-type(1) {
+    transform: rotate(45deg);
+    top: 0px;
+    left: 5px;
+}
+
+.navbar_menu-button input:checked~span:nth-of-type(2) {
+    width: 0%;
+    opacity: 0;
+}
+
+.navbar_menu-button input:checked~span:nth-of-type(3) {
+    transform: rotate(-45deg);
+    top: 28px;
+    left: 5px;
+}
+
 .navbar__enlaces {
-    display: flex;
-    gap: 2rem;
+    display: none;
 }
 
 .navbar__enlace {
@@ -639,6 +758,10 @@ body {
     transform: scaleX(1.1) scaleY(1.1);
     color: var(--blanco);
     background: var(--colorPrimario)
+}
+
+.navbar__enlace--contacto {
+    display: none;
 }
 
 .navbar__enlace--colorbutton {
@@ -676,6 +799,17 @@ body {
 
 /* ((MEDIA QUERYS)) */
 
+@media (min-width: 768px) {
+    .navbar_menu-button {
+        order: 3;
+    }
+
+    .navbar__enlace--contacto {
+        order: 2;
+        display: block;
+    }
+}
+
 @media (min-width: 900px) {
 
     .footer_enlaces {
@@ -709,14 +843,63 @@ body {
 
 @media (min-width: 1000px) {
     .contenedor {
-        width: 95%;
+        width: min(95%, 120rem);
     }
 
     .contenido {
         flex-direction: row;
+        margin-top: 8rem;
     }
 
-    .formulario {}
+    /* ((NAVBAR)) */
+
+
+    .navbar_menu-button {
+        display: none;
+    }
+
+    .navbar__enlaces {
+        display: flex;
+        gap: .5rem;
+    }
+
+    /* ((MUESTRA)) */
+    .muestra {
+        height: 60rem;
+
+        /*  */
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-auto-flow: dense;
+        column-gap: .5rem;
+        position: relative;
+    }
+
+    .muestra__banner {
+        width: 60%;
+        transform: translateX(-50%) translateY(25%);
+    }
+
+    .muestra__imagen {
+        grid-column: 2/3;
+        display: block;
+        background-image: url(../src/img/bg/parque_pueblonuevo.webp);
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+
+    .muestra__imagen::after {
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url(../src/img/textures/diagonal-noise.png);
+        opacity: .7;
+    }
+
 
     .informacion__izquierda {
         flex: 3;
@@ -738,6 +921,12 @@ body {
     .informacion__top div {
         /* layout */
         flex-direction: row-reverse;
+    }
+
+    /* ((UBICACION)) */
+
+    .ubicacion__mapa {
+        width: 90%;
     }
 
     /* ((BENEFICIOS)) */
@@ -762,5 +951,12 @@ body {
 
     .formulario__campo:nth-of-type(1) {
         margin-top: 2rem;
+    }
+}
+
+@media (min-width: 1300px) {
+    .navbar__enlaces {
+        display: flex;
+        gap: 2rem;
     }
 }
