--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 /* ((MAIN)) */
 
 .main {
-    padding-top: 10rem;
+    padding-top: 6rem;
 }
 
 /* ((MUESTRA)) */
@@ -666,16 +666,17 @@ body {
 .navbar {
     font-family: var(--fuentePrincipal);
     font-size: 1.6rem;
-    height: 7rem;
+    height: 6.4rem;
 
-    margin: 1.5rem 3rem;
+    margin: 0 3rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .navbar__logo {
-    height: inherit;
+    display: flex;
+    align-items: center;
 }
 
 .navbar_menu-button {
